k8s/deployments/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coursera-app
  labels:
    name: coursera-app
