k8s/deployments/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coursera-ingress
  namespace: coursera-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: coursera.zapto.org
    http:
      paths:
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: server-coursera-service
            port:
              number: 5001
      - path: /socket.io/?(.*)
        pathType: Prefix
        backend:
          service:
            name: chatserver-coursera-service
            port:
              number: 5004
      - path: /chat/?(.*)
        pathType: Prefix
        backend:
          service:
            name: chatserver-coursera-service
            port:
              number: 5003
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: client-coursera-service
            port:
              number: 80
